objects/ASI_CRM_Image_Level__c.object
<CustomObject>
    <description>ASI Image Levels</description>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Image</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW Image Level, ASI CRM TH Image Level</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TH_CRM_OutletImage__c</referenceTo>
        <relationshipLabel>Image Levels</relationshipLabel>
        <relationshipName>Image_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_Group_Outlet_Type__r.ASI_CRM_SG_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Image Level Threshold</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Image_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                    <default>true</default>
                    <label>Mainstream</label>
                </value>
                <value>
                    <fullName>Mainstream Quality</fullName>
                </value>
                <value>
                    <fullName>Mainstream Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Image Level</label>
    <listViews>
        <fullName>ASI_CRM_MY_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Level__c.ASI_CRM_MY_Image_Level</value>
        </filters>
        <label>MY Image Levels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_Outlet_Image__c</columns>
        <columns>ASI_CRM_SG_Min_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Level__c.ASI_CRM_TH_Image_Level</value>
        </filters>
        <label>TH Image Levels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type_Name__c</columns>
        <columns>ASI_CRM_Outlet_Image__c</columns>
        <columns>ASI_CRM_SG_Min_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Level__c.ASI_CRM_TW_Image_Level</value>
        </filters>
        <label>TW Image Levels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Image_Level__c.ASI_CRM_VN_Image_Level</value>
        </filters>
        <label>VN Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Image Level No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Levels</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM MY Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM SG Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM TH Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM TW Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM VN Image Level</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>